--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "base-64": "^1.0.0",
+    "base64-utf8": "^1.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "lodash": "^4.17.21",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.0",
     "prettier": "^2.7.0"
   }
 }
